# testing-perqueue

./: README.md  demo.ipynb  environment.yml  postBuild  workflow.json  workflow.py
arithmetic/: workflow.ipynb  workflow.py
nfdi/: workflow.json  workflow.py
nfdi/source/envs/: processing.yaml
quantum_espresso/: workflow.ipynb  workflow.json  workflow.py
quantum_espresso/espresso/pseudo/: Al.pbe-n-kjpaw_psl.1.0.0.UPF
quantum_espresso/qe_xml_parser/: pyproject.toml
